--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "vitest run npm run test-e2e",
+    "test": "vitest run",
     "test-e2e": "cypress open",
     "test:ui": "vitest --ui",
     "test:watch": "vitest",
@@ -14,17 +14,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preact/preset-vite": "^2.6.0",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-router": "^0.0.1-beta.152",
+    "@testing-library/preact": "^3.2.3",
+    "preact": "^10.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitejs/plugin-react-swc": "^3.4.1",
     "@vitest/ui": "^0.34.6",
     "autoprefixer": "^10.4.16",
     "cypress": "^13.4.0",
@@ -33,6 +36,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jest": "^29.7.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
