--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsdom": "^22.1.0",
     "lint-staged": "^15.0.2",
     "postcss": "^8.4.31",
+    "prettier": "3.0.3",
     "tailwindcss": "^3.3.3",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
